# arc3-wm

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  Makefile  README.md  pyproject.toml
analysis/: README.md  action_space_audit.md  build_p4_combined.py  build_p4_cross_cell_diagnosis.py  build_p4_vc33_diagnosis.py  h_classify_p4_vc33.py  lf52_termination.md  ls20_lf52_audit.md  ls20_lf52_audit.py  ls20_lf52_wandb_probe.py  p4_cross_cell_diagnosis.md  p4_fromscratch_vs_proper.md  p4_vc33_dryrun_diagnosis.ipynb  p4_vc33_dryrun_diagnosis.md  plot_action_entropy.py  uniform_random_baseline.py
arc3_wm/: __init__.py  __main__.py  action_space.py  embodied_env.py  env.py  eval_reward_sink.py  palette.py  registration.py  replay_loader.py  rhae.py  wm_only_agent.py
configs/: README.md  arc3.yaml
data/: README.md  human_baselines.json
docs/: README.md  compute-runbook.md  contribution.md  design-decisions.md  eval-pipeline-investigation.md  harness-analysis.md  phase-checklists.md  phase4-dryrun-cd82.md  phase4-dryrun-sb26.md  phase4-dryrun-vc33.md  phase4-smoke-evidence.md  phase4-smoke.md  phase4-warmstart-notes.md  progress-report-soumya.tex  replay-format.md  smoke-evidence.md  using-the-wrapper.md  vast-quickstart.md
docs/arc-agi-3/: actions.md  available-games.md  game-schema.md  llms.txt  local-vs-online.md  methodology.md  rate_limits.md  recordings.md  scorecards.md  vocabulary.md
docs/arc-agi-3/toolkit/: arc_agi.md  environment_wrapper.md  get-scorecard.md  list-actions.md  list-games.md  overview.md  submit-action.md
docs/figures/soumya/: README.md
examples/: README.md  gym_make.py  random_agent.py
results/random-eval/vc33/: random_rhae_summary.json
scripts/: README.md  build_benchmark_table.py  cache_env_files.py  check_smoke_green.py  compute_rhae.py  eval_random_rhae.py  extract_human_baselines.py  fetch_docs.py  inspect_drop_context.py  inspect_levels_decrease.py  inspect_replay.py  inspect_terminal_runs.py  launch_pergame.py  launch_phase4_expansion_fromscratch.sh  launch_phase4_expansion_warm.sh  launch_phase4_fromscratch.sh  launch_phase4_proper.sh  make_soumya_figures.py  pretrain_wm.py  pretrain_wm_smoke.py  random_agent_smoke.py  smoke_full_replays.py  stage_env_files.sh  survey_levels_decrease.py  survey_post_terminal.py  validate_5070.py
tests/: README.md  conftest.py  test_action_space.py  test_check_smoke_green.py  test_compute_rhae.py  test_embodied_env.py  test_eval_random_rhae.py  test_eval_reward_sink.py  test_extract_human_baselines.py  test_launcher_arg_parsing.py  test_launcher_dry_run.py  test_launcher_imports.py  test_launcher_warmstart.py  test_main_cli.py  test_package_api.py  test_palette.py  test_phase4_chain.py  test_pretrain_wm.py  test_random_agent.py  test_registration.py  test_replay_loader.py  test_requires_jax_marker.py  test_rhae.py  test_smoke.py  test_validate_5070.py  test_wm_only_agent.py  test_wrapper_spec.py
