[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc3-wm"
version = "0.0.0"
description = "A Gymnasium / DreamerV3-embodied substrate for world-model RL on ARC-AGI-3"
requires-python = ">=3.11"
authors = [{ name = "Haso" }]
readme = "README.md"
keywords = [
    "arc-agi-3",
    "reinforcement-learning",
    "world-models",
    "model-based-rl",
    "dreamerv3",
    "gymnasium",
    "benchmark",
]
# NOTE: no `license` field yet — must be chosen before public release.
# See docs/contribution.md § License. (No license classifier for the
# same reason.)
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/ssrhaso/ARC_AGI_3"
"ARC-AGI-3" = "https://arcprize.org/tasks"

dependencies = [
    "arc-agi",
    "gymnasium>=0.29",
    "numpy",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-xdist",
    "gdown",
]

[tool.setuptools.packages.find]
include = ["arc3_wm*"]
exclude = ["tests*", "third_party*", "scripts*", "configs*", "docs*", "data*", "checkpoints*", "results*"]

[tool.setuptools.package-data]
# PEP 561: ship the inline-type marker so downstream type-checkers
# (mypy/pyright) trust arc3_wm's annotations instead of skipping them.
arc3_wm = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
