[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc3-wm"
dynamic = ["version"]
description = "A Gymnasium / DreamerV3-embodied substrate for world-model RL on ARC-AGI-3"
requires-python = ">=3.11"
authors = [{ name = "Hasaan Ahmad" }]
readme = "README.md"
keywords = [
    "arc-agi-3",
    "reinforcement-learning",
    "world-models",
    "model-based-rl",
    "dreamerv3",
    "gymnasium",
    "benchmark",
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
]

dependencies = [
    "arc-agi",
    "gymnasium>=0.29",
    "numpy",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-xdist",
    "gdown",
]

[project.urls]
Homepage = "https://github.com/ssrhaso/ARC_AGI_3"
Repository = "https://github.com/ssrhaso/ARC_AGI_3"
Documentation = "https://github.com/ssrhaso/ARC_AGI_3/tree/main/docs"
Changelog = "https://github.com/ssrhaso/ARC_AGI_3/blob/main/CHANGELOG.md"
Issues = "https://github.com/ssrhaso/ARC_AGI_3/issues"
"ARC-AGI-3" = "https://arcprize.org/tasks"

[tool.setuptools.dynamic]
# Single source of truth: arc3_wm.__version__. setuptools reads the
# string literal statically (no import needed at build time).
version = { attr = "arc3_wm.__version__" }

[tool.setuptools.packages.find]
include = ["arc3_wm*"]
exclude = ["tests*", "third_party*", "scripts*", "configs*", "docs*", "data*", "checkpoints*", "results*"]

[tool.setuptools.package-data]
# PEP 561: ship the inline-type marker so downstream type-checkers
# (mypy/pyright) trust arc3_wm's annotations instead of skipping them.
arc3_wm = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "requires_jax: test needs the JAX/DreamerV3 stack; auto-skipped when jax is unimportable (see tests/conftest.py).",
]
